Change image height 10 100 Viewport height to stop it looking squashed when In full display size.

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ nav a:hover {
     align-items: center;
     width: 100%;
     flex-direction: column;
-    height: auto;
+    height: 100vh;
 }
 
 
